fix padding bug causing text overlap on index/main page

--- a/main.css
+++ b/main.css
@@ -82,7 +82,7 @@ header > a {
   clear: both;
   display: flex;
   padding-top: 30px;
-  padding-bottom: 10px;
+  padding-bottom: 60px;
   min-width: 350px;
 }
 
